--- a/src/app/_pages/users/user-profile/user-profile.component.html
+++ b/src/app/_pages/users/user-profile/user-profile.component.html
@@ -1,12 +1,121 @@
-<div class="container">
-    <app-confirm-alert></app-confirm-alert>
-    <app-breadcrumb [pages]="breadcrumbPages"></app-breadcrumb>
-    <header class="page-title">
-        <h1 *ngIf="(mode | async) == 'EDIT'" class="title">EDITAR PERFIL</h1>
-        <h1 *ngIf="(mode | async) == 'CREATE'" class="title">NOVO USUÁRIO</h1>
-    </header>
-    <app-user-profile-form [user]="user" *ngIf="(mode | async) == 'EDIT'"></app-user-profile-form>
-    <ng-container *ngIf="user.role === 'ADMIN'">
-        <app-create-user-form *ngIf="(mode | async) == 'CREATE'"></app-create-user-form>
-    </ng-container>
+<div class="wrapper">
+    <div class="title">
+        <span>
+            Seu perfil
+        </span>
+        <label>
+        Veja e alter suas informações
+        </label>
+    </div>
+    <div class="tabs row">
+        <div class="informations col-3" (click)="setTab(tabOptions.PROFILE)" [ngClass]="{'tab-selected': currentTab === tabOptions.PROFILE}">
+            <label>
+                Informações do perfil
+            </label>
+        </div>
+        <div class="service col-1"></div>
+        <div class="service col-3" (click)="setTab(tabOptions.SERVICE)" [ngClass]="{'tab-selected': currentTab === tabOptions.SERVICE}">
+            <label>
+                Informações do seu serviço
+            </label>
+        </div>
+        <div class="service col-5"></div>
+    </div>
+    <div class="container">
+        <div class="wrapper row">  
+            <div class="left-side col-4">
+                <div class="divisor">
+                    <div class="user-space">
+                        <div class="user-labels">
+                            <span class="profile-label"> Perfil </span>
+                            <div class="user-img">
+                            <img src="../../../assets/images/new/perfilDefault.jpg">
+                            </div>
+                            <div  class="profile-name-function">
+                                <label>{{user.user.name}} {{user.user.lastName}}</label>
+                                <span > {{user.user.role}} </span>
+                            </div>
+                            <span class="localization-label">localização, placeholder</span>
+                        </div>
+                        <div class="row folows-info">
+                            <div class="col-6 folows-info-division">
+                                <span>9.999</span>
+                                <label>Seguidores</label>
+                            </div>
+                            <div class="col-6">
+                                <span >9.999</span>
+                                <label>Seguindo</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="logout" (click)="logout()">
+                    <span> Deslogar da sua conta </span>
+                </button>
+            </div>
+            <div class="right-side col-8">
+                <div class="row edit-row">
+                    <button type="button" class="col-3 edit">
+                        <span class="material-symbols-outlined">
+                            edit
+                        </span>
+                        <span> Editar </span>
+                    </button>
+                </div>
+                <form [formGroup]="userForm" *ngIf="currentTab === tabOptions.PROFILE">
+                        <div class="">
+                            <div class="form-group row">
+                                <div class="form-group col-7">
+                                    <label>Nome</label>
+                                    <input type="text" class="form-control" formControlName = "name" name="username" [attr.readonly]="true">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="form-group col-7">
+                                    <label>Sobrenome</label>
+                                    <input type="text" class="form-control" formControlName = "lastName" name="lastName"  [attr.readonly]="true">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="form-group col-7">
+                                    <label>CPF/CNPJ</label>
+                                    <input type="text" [mask]="mask" class="form-control" formControlName = "cpfCnpj" name="cpfCnpj"  [attr.readonly]="true">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="form-group col-7">
+                                    <label>Email</label>
+                                    <input type="text" class="form-control" formControlName = "email" name="email"  [attr.readonly]="true">
+                                </div>
+                            </div>
+                        </div>
+                   
+                </form>
+                <form [formGroup]="userForm" *ngIf="currentTab === tabOptions.SERVICE">
+                    <div class="">
+                        <div class="form-group row">
+                            <div class="form-group col-7">
+                                <label>Selecione um segmento</label>
+                                <input type="select" class="form-control" formControlName = "segment" name="" [attr.readonly]="true">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group col-7">
+                                <label>Selecione as atividades</label>
+                                <input type="select" class="form-control" formControlName = "activities" name="" [attr.readonly]="true">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group col-7">
+                                <label>Escolha a abrangencia territorial</label>
+                                <input type="select" class="form-control" formControlName = "abrangency" name="" [attr.readonly]="true">
+                            </div>
+                        </div>
+                    </div>
+               
+            </form>
+            </div>
+        </div>
+    </div> 
 </div>
+  
