--- a/src/app/_components/users/user-list/user-list.component.html
+++ b/src/app/_components/users/user-list/user-list.component.html
@@ -1,23 +1,87 @@
-<div class="table-container">
-  <table>
-    <thead>
-      <th>Perfil</th>
-      <th>E-mail</th>
-      <th>Cargo</th>
-      <th>Ações</th>
-    </thead>
-    <tr *ngFor="let user of users | paginate: config, let idx = index">
-      <td>{{user.fullname}}</td>
-      <td>{{user.email}}</td>
-      <td>{{user.role}}</td>
-      <td>
-        <button (click)="navigate('EDIT', user)">
-          <i class="icon ic-pencil-edit"></i>
-        </button>
-        <button (click)="deleteUser(user.id)">
-          <i class="icon ic-delete-can"></i>
-        </button>
-      </td>
-  </table>
-  <app-pagination-template [config]="config" (changePageEvent)="changePage($event)"></app-pagination-template>
+<div class="wrapper">
+  <div class="title">
+    <span>
+    Administrador
+  </span>
+  <label>
+    Pesquise e edite dados dos clientes.
+  </label>
+  </div>
+  <div class="container">
+   <div class="wrapper"> 
+    <form [formGroup]=""> 
+      <div class="header">
+        <div class="search-bar">
+          <input type="text" name="" id="" placeholder="Pesquisar" formControlName = "title">
+          <button class="dds__icons dds__search"></button>
+        </div>
+        
+        <div class="filter"> 
+          <div id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+            <span class="material-symbols-outlined">filter_list</span>
+            <label>
+              Filtros
+            </label>
+          </div>
+          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton" data-bs-auto-close="outside">
+            <app-search-filter-dropdown></app-search-filter-dropdown>
+          </div>
+        </div>
+      </div>  
+    </form>
+    <div class="table-backgound">
+      <div class="row row-header">
+        <div class="col-2">
+          <span>Nome</span>
+        </div>
+        <div class="col-2">
+          <span>Função</span>
+        </div>
+        <div class="col-2">
+          <span>Status</span>
+        </div>
+        <div class="col-2">
+          <span>Abrangencia</span>
+        </div>
+        <div class="col-2">
+          <span>CPF/CNPJ</span>
+        </div>
+        <div class="col-2 favorite-check">
+          <span>Açoes</span>
+        </div>
+      </div>
+      <div>
+        <div class="table-scroller">
+        <div class="table-content2" *ngFor="let user of users;  let i = index">
+          <div class="table-content"  (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
+            <div class="row" [ngClass]="{'selected': i === selected} ">
+              <div class="col-2 user-name">
+                <div>
+                  <span>{{ user.name}} {{ user.lastName}}</span>
+                  <label>{{ user.email}}</label>
+                </div>
+              </div>
+              <div class="col-2">
+                <span>{{ user.profile }}</span>
+              </div>
+              <div class="col-2">
+                <span>{{ user.active }}</span>
+              </div>
+              <div class="col-2">
+                <span> Placeholder </span>
+              </div>
+              <div class="col-2">
+                <span >{{ user.cpfCnpj }}</span>
+              </div>
+              <div class="col-2 actions">
+                <span class="details">Ver</span>
+                <span class="change-password">Resetar senha</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div> 
 </div>
