--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
 }
 .nav-item {
   height: 100%;
-  width: 98%;
+  width: 92%;
   padding-left: 15%;
   align-self: end;
   display: flex !important;
@@ -73,5 +73,5 @@
 
 .nav-profile-label {
   padding: 6px 9px !important;
-  margin-bottom: 22%;
+  margin-bottom: 60px;
 }
