--- a/src/app/_components/password-recovery/password-recovery.component.scss
+++ b/src/app/_components/password-recovery/password-recovery.component.scss
@@ -1,7 +1,7 @@
 img {
   background-size: cover;
-  height: 490px;
-  width: 490px;
+  height: 360px;
+  width: 360px;
   margin-top: 6%;
   margin-left: 50%;
   position: absolute;
@@ -18,11 +18,11 @@ img {
   color: #000000;
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 6%;
+  margin-bottom: 1%;
 }
 
 .form-group {
-  max-width: 55%;
+  max-width: 40%;
   margin-bottom: 10px!important;
   label {
     font-weight: 500;
@@ -42,23 +42,28 @@ a {
   
 .btn-advance {
   border: none;
-  color: rgb(0, 0, 0);
+  color: #fff;
+  font-weight: 500;
   border-radius: 6px !important;
   background-color: #43d19e;
   display: flex;
   padding: 1%;
-  margin: 3% 0%;
+  min-width: 10rem;
+  margin: 2% 0%;
+  justify-content: center;
 }
 
 .btn-cancel {
   color: #ff7e64;
   border: solid 2px #ff7e64;
   border-radius: 6px !important;
-  background-color: #ffffff;
+  background-color: #fff;
   display: flex;
-  padding: 0.8%;
+  padding: .8%;
   cursor: pointer;
-  margin: 0% 2% 0% 0%;
+  min-width: 10rem;
+  margin: 0% 1% 0% 0%;
+  justify-content: center;
 }
 
 .password-errors-label{
