--- a/src/app/_pages/create-account/create-account.component.html
+++ b/src/app/_pages/create-account/create-account.component.html
@@ -6,7 +6,8 @@
             <div class="col-7">
                 <div class="sub-title">Informações do perfil</div>
                 <div class="row">
-                    <div class="form-group col">
+                    <div class="col">
+                        <div class="form-group">
                         <label>Nome</label>
                         <input type="text" class="form-control" formControlName = "name" name="username" 
                         [ngClass]="{
@@ -14,31 +15,42 @@
                         <div class="invalid-message" *ngIf="!userForm.get('name').valid && showErrors">
                             <span>Preenchimento obrigatório</span>
                         </div>
+                        </div>
                     </div>
-                    <div class="form-group col">
+                    <div class="col">
                         <div class="form-group">
-                            <label>Sobrenome</label>
-                            <input type="text" class="form-control" formControlName = "lastName" name="lastName" 
-                            [ngClass]="{
-                                'invalid-field': !userForm.get('lastName').valid && showErrors}">
-                            <div class="invalid-message" *ngIf="!userForm.get('lastName').valid && showErrors">
-                                <span>Preenchimento obrigatório</span>
-                            </div>
+                        <label>Sobrenome</label>
+                        <input type="text" class="form-control" formControlName = "lastName" name="lastName" 
+                        [ngClass]="{
+                            'invalid-field': !userForm.get('lastName').valid && showErrors}">
+                        <div class="invalid-message" *ngIf="!userForm.get('lastName').valid && showErrors">
+                            <span>Preenchimento obrigatório</span>
+                        </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-6">
                         <div class="form-group">
-                            <label>CPF/CNPJ</label>
-                            <input type="text" inputmode="numeric" class="form-control" formControlName = "cpf_cnpj" name="CPF/CNPJ"  
+                            <label>CPF / CNPJ</label>
+                            <input type="text" [mask]="!cpfInput ? '00.000.000/0000-00':'000.000.000-00'" class="form-control" formControlName = "cpf_cnpj" name="CPF/CNPJ"  
                             [ngClass]="{
                                 'invalid-field': !userForm.get('cpf_cnpj').valid && showErrors}">
                             <div class="invalid-message" *ngIf="!userForm.get('cpf_cnpj').valid && showErrors">
                                 <span>Preenchimento obrigatório</span>
                             </div>
                         </div>
-                    </div>   
+                    </div>
+                </div>
+                <div class="toggle-container">
+                    <div>
+                        <span (click)="togleCpfCnpj(true)" class="cpf-side" [ngClass]="{'toggle-selected': cpfInput}">
+                            CPF
+                        </span>
+                        <span (click)="togleCpfCnpj(false)" class="cnpj-side" [ngClass]="{'toggle-selected': !cpfInput}">
+                            CNPJ
+                        </span>
+                    </div>                    
                 </div>
                 <div class="row">
                     <div class="col">
@@ -140,36 +152,36 @@
             <div class="col-5">
                 <div class="sub-title">Informações do serviço</div>
                 <div class="row">
-                    <div class="form-group">
+                    <div class="form-group col-9">
                         <label>Selecione um segmento</label>
-                        <input type="select" class="form-control" formControlName = "segment" name="" disabled>
+                        <input type="select" class="form-control" formControlName = "segment" name="" [attr.readonly]="true">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group">
+                    <div class="form-group col-9">
                         <label>Selecione as atividades</label>
-                        <input type="select" class="form-control" formControlName = "activities" name="" disabled>
+                        <input type="select" class="form-control" formControlName = "activities" name="" [attr.readonly]="true">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group">
+                    <div class="form-group col-9">
                         <label>Escolha a abrangencia territorial</label>
-                        <input type="select" class="form-control" formControlName = "abrangency" name="" disabled>
+                        <input type="select" class="form-control" formControlName = "abrangency" name="" [attr.readonly]="true">
                     </div>
                 </div>
                 <div class="col">
                     <div class="container-checkbox row">
-                        <div class="col-12 mb-1">
+                        <div class="col-12">
                             <input type="checkbox" formControlName = "acceptedTermsOfUse">
                             <span class="">Li e aceito os</span>
-                            <a (click)="showTermsOffUse()"> termos de uso </a>
+                            <a (click)="showTermsOffUse()"> Termos de uso </a>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 mt-3">
                             <input type="checkbox" formControlName = "acceptedPrivacyPolicy">
                             <span class="">Li e aceito as</span>
                             <a (click)="showPrivacyPolice()"> Políticas de privacidade </a>
                         </div>
-                        <div class="invalid-message" *ngIf="(!userForm.get('acceptedTermsOfUse').value || !userForm.get('acceptedPrivacyPolicy').value)  && showErrors">
+                        <div class="invalid-message mb-3" *ngIf="(!userForm.get('acceptedTermsOfUse').value || !userForm.get('acceptedPrivacyPolicy').value)  && showErrors">
                             <span>O aceite dos termos de uso e políticas de privacidade são obrigatórios.</span>
                         </div>
                     </div>
