--- a/src/app/_pages/login/login.component.scss
+++ b/src/app/_pages/login/login.component.scss
@@ -1,9 +1,9 @@
 img {
   background-size: cover;
-  height: 480px;
-  width: 480px;
-  margin-top: 8%;
-  margin-left: 66%;
+  height: 360px;
+  width: 360px;
+  margin-top: 6%;
+  margin-left: 55%;
   position: absolute;
   z-index: -1;
   rotate: 16deg;
@@ -28,7 +28,7 @@ img {
   color: #000000;
   font-size: 3rem;
   font-weight: bold;
-  margin-bottom: 6%;
+  margin-bottom: 1%;
 }
 
 .form-group {
@@ -54,13 +54,15 @@ a {
 
 .btn-advance {
   border: none;
-  color: rgb(0, 0, 0);
+  color: #fff;
   font-weight: 500;
   border-radius: 6px !important;
   background-color: #43d19e;
   display: flex;
   padding: 1%;
-  margin: 5% 0%;
+  min-width: 10rem;
+  margin: 2% 0%;
+  justify-content: center;
 }
 
 .dds__arrow-right {
